--- a/MyGame.csproj
+++ b/MyGame.csproj
@@ -43,6 +43,7 @@
   <ItemGroup>
     <Compile Include="Background.cs" />
     <Compile Include="GameState.cs" />
+    <Compile Include="Platforms.cs" />
     <Compile Include="Player.cs" />
     <Compile Include="Game1.cs" />
     <Compile Include="Program.cs" />
