--- a/MyGame.csproj
+++ b/MyGame.csproj
@@ -42,6 +42,7 @@
   </PropertyGroup>
   <ItemGroup>
     <Compile Include="Background.cs" />
+    <Compile Include="Monster.cs" />
     <Compile Include="GameState.cs" />
     <Compile Include="Player.cs" />
     <Compile Include="Game1.cs" />
